# FEniCS-Medical-Simulation

FEniCSBloodSim/: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt.user.cb8edc9  fenics_blood_sim.cpp  fenics_blood_sim.h  fenics_blood_sim.qrc  fenics_blood_sim.ui  main.cpp  renderwindowuisingleinheritance.cpp  renderwindowuisingleinheritance.ui
FEniCSBloodSim/GUI_Module/: fenics_blood_sim.h
FEniCSBloodSim/GUI_Module/DragClass/: dragablewidget.cpp  dragablewidget.h  draglabel.cpp
FEniCSBloodSim/GUI_Module/DragItem/: dragitem.cpp  dragitem.h
FEniCSBloodSim/GUI_Module/ITK_PIPELINE/: itkpipelinefactory.h  itkpipelineoperation.cpp
FEniCSBloodSim/GUI_Module/Menu/: aboutmenubuilder.cpp  aboutmenubuilder.h  editmenubuilder.cpp  editmenubuilder.h  (+4 more)
FEniCSBloodSim/ImageProcessing_Module/: imagedata.cpp  imagedata.h  imagereader.cpp
FEniCS_BloodSim/trunk/FEniCSBloodSim/: CMakeLists.txt  CMakeLists.txt.user.18  dialog.ui  fenics_blood_sim.cpp  fenics_blood_sim.h  fenics_blood_sim.qrc  fenics_blood_sim.ui  main.cpp  renderwindowuisingleinheritance.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/: fenics_blood_sim.cpp  fenics_blood_sim.ui
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Data/FBS_Project/: fbs_projectdata.cpp  fbs_projectdata.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Data/FEniCSData/: categoryfenicsdata.cpp  categoryfenicsdata.h  combovaluesfenicsdata.cpp  fenicsxmldata.cpp  functionfenicsdata.cpp  functionfenicsdata.h  parameterfenicsdata.cpp
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Data/WorkflowData/: categorywkfdata.cpp  categorywkfdata.h  imagingwkffunctiondata.cpp  imagingwkffunctiondata.h  workflowdata.cpp
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Defines/Menu/: MenuDefines.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Defines/Workflow/: WorkflowDefines.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/DragClass/: arrow.cpp  arrow.h  diagramitem.cpp  diagramitem.h  dragablewidget.cpp  dragablewidget.h  draglabel.cpp  draglabel.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/DragItem/: dragitem.cpp  dragitem.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Forms/: aboutdialog.cpp  aboutdialog.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Forms/FEniCS/: fenicsconfigurationdialog.cpp  fenicsconfigurationdialog.h  fenicsconfigurationdialog.ui
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Forms/FEniCS/XML/: FEniCSXmlCodeSnippsets.xml
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Forms/Imaging/: medicalimagingdialog.ui
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Forms/Workflow/: genericworkflowdialog.cpp  genericworkflowdialog.h  genericworkflowdialog.ui  imageworkflow.cpp  imageworkflow.h  imageworkflowdialog.cpp  imageworkflowdialog.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Forms/Workflow/Pipeline/: configurationpipelineitem.cpp  configurationpipelineitem.h  pipelineitem.cpp  pipelineitem.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Forms/Workflow/XML/: ImageXmlMethods.xml
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/ITK_PIPELINE/: ItkPipelineImpl.h  histogramequalization.cpp  histogramequalization.h  itkpipelinefactory.cpp  itkpipelineoperation.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Menu/: aboutmenubuilder.cpp  aboutmenubuilder.h  editmenubuilder.h  filemenubuilder.cpp  filemenubuilder.h  menubuilder.cpp  menubuilder.h  simulationmenubuilder.cpp  simulationmenubuilder.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Menu/Simulation/: imageprocessingsimmenu.cpp  imageprocessingsimmenu.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Pipeline/Data/: imagepipelinedata.cpp  imagepipelinedata.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Pipeline/FEniCSPipeline/: fenicspipelinedata.h  sourcecodegenerator.cpp  sourcecodegenerator.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Pipeline/ItkPipeline/: ioperation.h  operationfactory.cpp
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Pipeline/ItkPipeline/defines/: OperationDefines.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Pipeline/ItkPipeline/operations/: adaptivehistogramequalization.cpp  adaptivehistogramequalization.h  binarization.cpp  binarization.h  slicebyslicefilter.cpp  slicebyslicefilter.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/Session/: userimageinfosession.cpp  usersessiondata.cpp  usersessiondata.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/UIHelpers/: imagetabuihelper.cpp  imagetabuihelper.h  workflowtablehelper.cpp  workflowtablehelper.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/GUI_Module/XML/: xmlfenicsinformationdata.cpp  xmlfenicsinformationdata.h  xmlprojectdata.cpp  xmlprojectdata.h  xmlusersessiondata.cpp  xmlusersessiondata.h  xmlworkflowmethodsdata.cpp  xmlworkflowmethodsdata.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/ImageProcessing_Module/: imagedata.cpp  imagedata.h  imagereader.cpp  imagereader.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/ImageProcessing_Module/Defines/: ImageDefines.h
FEniCS_BloodSim/trunk/FEniCSBloodSim/PLS/vessel_seg.2014.11.13/: LICENSE
FEniCS_BloodSim/trunk/FEniCSBloodSim/PLS/vessel_seg.2014.11.13/images/drive/: extract_images.sh
FEniCS_BloodSim/trunk/FEniCSBloodSim/PLS/vessel_seg.2014.11.13/images/messidor/: extract_images.sh
FEniCS_BloodSim/trunk/FEniCSBloodSim/PLS/vessel_seg.2014.11.13/images/stare/: extract_images.sh  im0002_mask.pgm  im0004_mask.pgm  im0005_mask.pgm  im0077_mask.pgm  im0081_mask.pgm  im0139_mask.pgm  im0162_mask.pgm  im0163_mask.pgm  im0235_mask.pgm  im0236_mask.pgm  im0255_mask.pgm  im0324_mask.pgm
FEniCS_BloodSim/trunk/VascularSegmentation/: CMakeLists.txt
FEniCS_BloodSim/trunk/VascularSegmentation/Defines/: ImageITKVTKDefines.h
GUIModule/FEniCS_BloodSim_GUI/: FEniCS_BloodSim_GUI.pro
ImageModule/: CMakeLists.txt  ejemplo1.h  main.cpp
ImageModule/Data/: angiogramvo.h
ImageModule/Helper/Image/: imagehelper.cpp  imagehelper.h
VascularSegmentation/: main.cpp
VascularSegmentation/Defines/: ImageITKVTKDefines.h
(+70 files in other folders)
